Naftah - documentation - updated CONTRIBUTING.md